--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,49 +1,92 @@
-<!doctype html>
-<html>
-<head>
-<title>Trang Chủ</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Official Signup Form Responsive, Login form web template,Flat Pricing tables,Flat Drop downs  Sign up Web Templates, Flat Web Templates, Login signup Responsive web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!-- fonts -->
-<link href="//fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-<link href="//fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
-<!-- /fonts -->
-<!-- css -->
-<link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all" />
-<link href="css/style.css" rel='stylesheet' type='text/css' media="all" />
-<link href="css/pages/home.css" rel='stylesheet' type='text/css' media="all" />
-<!-- /css -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-</head>
-<!-- Index -->
-<body>
-<div class="homep">
-  <!-- Title -->
-  <h1 class="w3ls">Ngân Hàng Shiba Bank</h1>
- 
-<div class="content-w3ls">
-   <!-- Logo -->
-	<div class="content-agile1">
-    <div class="logo"><img src="../images/logo.png" alt="icon"></div>
-		<h2 class="agileits1">Official</h2>
-		<p class="agileits2">Đồ Án Lập trình web 2</p>
-  </div>
-  <!-- Table of contents -->
-  <div class="content-agile2 Contents">
-    <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-      <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">Trang Chủ</a>
-      <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">Giới Thiệu</a>
-      <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="/login" role="tab" aria-controls="v-pills-messages" aria-selected="false">Đăng Nhập</a>
-      <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="/register" role="tab" aria-controls="v-pills-settings" aria-selected="false">Đăng Kí</a>
-    </div>
-	</div>
-	<div class="clear"></div>
-</div>
-	<!-- author -->
-<p class="copyright w3l source">© 2020 Lập trình web 2 _ 1760058 _ 1760076 _ 1760086 _ 1760100</p>
-</div>
-</body>
-</html>
+<!DOCTYPE html
+  PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" type="text/css" href="css/mainstyle.css">
+  <link rel="stylesheet" type="text/css" href="css/reponsive.css">
+  <title>ShibaBank Internet Banking | Home Page</title>
+</head>
+
+<body>
+
+  <div class="header">
+    <div class="wrapper">
+      <div class="logo">
+        <a title="ShibaBank" href="#"><img src="../images/logo.png" /></a>
+        <h1>Ngân Hàng ShibaBank</h1>
+      </div>
+      <!--end .logo-->
+      <br class="clear">
+    </div>
+  </div>
+  <!--end .header-->
+
+  <div class="section">
+    <div class="wrapper">
+
+    </div>
+  </div>
+  <!--end .section-->
+
+  <div class="content">
+    <div class="wrapper">
+
+      <div class="aside">
+        <ul id="browser" class="navAside">
+
+          <li class="closed"><a href="#">Trang chủ</a></li>
+          <li class="closed"><a href="trans.jsp?cat=0">Giao dịch</a></li>
+          <li class="closed"><a href="#">Liên hệ</a></li>
+          <li class="closed"><a href="/login">Đăng Nhập</a></li>
+          <li class="closed"><a href="/register">Đăng Kí</a></li>
+        </ul>
+      </div>
+      <!--end .aside-->
+
+
+      <div class="mainContent">
+        <h2 class="title_art">Dịch Vụ<span class="sp_pow"></span></h2>
+        <div class="mod_reg">
+          <div class="wrap_reg">
+            <div class="mReg left_mReg">
+              Thích nhập gì thì nhập... :v!!
+            
+            <script language="javascript">
+              document.onload = ctck();
+            </script>
+            
+                        </div>
+                        <!--end .left_mReg-->
+            
+                      <div class="mReg right_mReg">
+                          <div class="helpSer">
+                              <h3>Công cụ</h3>
+                                    <ul>
+                                      <!-- <li><a href="tcbaolanh.jsp" style="color:#AF1E40 !important;">Tra cứu bảo lãnh</a></li>  -->
+                                      <!-- <li><a href="tcbaolanh.jsp">Tra cứu bảo lãnh</a></li> -->
+                                      <li><a href="#">Tra cứu bảo lãnh</a></li>
+                                      <!-- <li><a href="otp_orders.jsp" style="color:#AF1E40 !important;font-size: 15px;font-family: Helvetica, sans-serif !important;font-weight: bold;">Đăng ký chuyển đổi số điện thoại nhận SMS OTP từ 11 số sang 10 số</a></li> -->
+                                    </ul>
+                            </div>
+                          <div class="helpSer">
+                              <h3>Trợ giúp</h3>
+                                    <ul>
+                                    <li><a href="./CanhBaoGiaoDichGiaMaoDichVuNganHangDienTu.pdf" style="color:#AF1E40 !important;font-size: 20px;font-family: Helvetica, sans-serif !important;">Khuyến Cáo Bảo Mật Thông Tin</a></li>
+                                      <li><a href="./Agr_clearCache.doc" style="color:#AF1E40 !important;">Xóa cache trên web browser</a></li>
+                                    </ul>
+                            </div>
+                        </div>
+                        <!--end .right_mReg-->
+                        <br class="clear">
+                    </div></div>
+                </div>
+                <!--end .mainContent-->
+              <br class="clear">
+    </div>
+  </div>
+</body>
+
+</html>
