--- a/views/partials/templateleft.ejs
+++ b/views/partials/templateleft.ejs
@@ -9,6 +9,7 @@
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Quản lí tài khoản</a>
         <div class="dropdown-menu">
+          <a class="dropdown-item" href="/accountNumber">Tài khoản/Thẻ</a>
           <a class="dropdown-item" href="#">Thông tin tài khoản</a>
           <a class="dropdown-item" href="#">Liệt kê giao dịch trực tiếp</a>
           <a class="dropdown-item" href="#">Something else here</a>
