add Transaction history

--- a/views/partials/templateleft.ejs
+++ b/views/partials/templateleft.ejs
@@ -11,7 +11,7 @@
         <div class="dropdown-menu">
           <a class="dropdown-item" href="/accountNumber">Tài khoản/Thẻ</a>
           <a class="dropdown-item" href="">Thông tin tài khoản</a>
-          <a class="dropdown-item" href="#">Liệt kê giao dịch trực tiếp</a>
+          <a class="dropdown-item" href="/transactionHistory">Liệt kê giao dịch trực tiếp</a>
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
