--- a/views/partials/transfers.ejs
+++ b/views/partials/transfers.ejs
@@ -5,7 +5,7 @@
 <%- include ('templateright.ejs') -%>
 <br />
 <div class="container">
-    <form method="POST" action="verifyMoney">
+    <form method="POST" action="">
         <div class="form-group">
             <h5>Thông tin người chuyển</h5>
             <label for="accountNumber">Tài khoản nguồn</label>
