--- a/views/partials/verifyMoney.ejs
+++ b/views/partials/verifyMoney.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <form method="GET" action="notification/<%= transaction.code %>">
+        <form method="GET" action="verifyMoney/<%= transaction.code %>">
             <div class="form-group">
                 <p>Mã giao dịch: <%= transaction.code %> </p>
                 <p>Tài khoản gửi: <%= transaction.accuontSender %> </p>
@@ -19,7 +19,6 @@
                 <p>Phí chuyển: 2.200 VNĐ</p>
                 <p>Nội dung:  <%= transaction.content %></p>
             </div>
-           
             <button type="submit" class="btn btn-primary mb-2">Tiếp tục</button>
         </form>
     </div>
