--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -5,28 +5,29 @@
 <link rel="icon" href="https://f0.pngfuel.com/png/982/55/white-laptop-icon-png-clip-art.png">
 <link href="css/pages/account.css" rel='stylesheet' type='text/css' media="all" />
 </head>
-<body>
+<body style="background-image:url(./images/maunen1.jpg);">
 	<!-- Title -->
-<h1>Ngân Hàng Shiba Bank</h1>
+<h1 style="font-family: 'Times New Roman', Times, serif;color:  #AF1E40;font-size: 70px; font-weight: normal;">Ngân Hàng ShibaBank</h1>
 
 <div class="container" id="container">
 	<!-- form login -->
 	<div class="form-container sign-in-container">
 		<form method="POST">
-			<h1>Sign in</h1>
-			<input name="email" id="email" type="text" placeholder="User" />
-			<input name="password" id="password" type="password" placeholder="Password" />
-			<a href="/forgotpassword">Forgot your password?</a>
-			<button type="submit">Sign In</button>
+			<h1>Đăng Nhập</h1>
+			<input name="email" id="email" type="text" placeholder="Tên Đăng Nhập" />
+			<input name="password" id="password" type="password" placeholder="Mật Khẩu" />
+			<a href="/forgotpassword">Quên mật khẩu?</a>
+			<button type="submit">Hoàn Thành</button>
 		</form>
 	</div>
 	<!-- Introduce -->
 	<div class="overlay-container">
 		<div class="overlay">
 			<div class="overlay-panel overlay-right">
-				<h1>Hello, Friend!</h1>
-				<p>Enter your personal details and start journey with us</p>
-				<button onclick="window.location.href='/register'" style="background:#FFF!important;color:#FF4B2B!important;margin-top:65px;border:1px solid #FFF" type="submit">Register</button>
+				<h1>Welcome ShibaBank</h1>
+				<p>Ngân hàng ShibaBank kính chào quý khách!</p>
+				<p>Bạn chưa có tài khoản?</p>
+				<button onclick="window.location.href='/register'" style="background:#FFF!important;color:#FF4B2B!important;margin-top:1vw;border:1px solid #FFF" type="submit">Đăng kí</button>
 			</div>
 		</div>
 	</div>
@@ -34,12 +35,6 @@
 
 	<!-- author -->
 <footer>
-	<p>
-		Contact with me <i class="fa fa-heart"></i> by
-		<a target="_blank" href="https://www.facebook.com/tramhuu.nghiep1999">NghiepTram</a>
-		- Read how I created this and how you can join the challenge
-		<a target="_blank" href="https://www.florin-pop.com/blog/2019/03/double-slider-sign-in-up-form/">here</a>.
-	</p>
 </footer>
 
 </body>
