--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -4,37 +4,32 @@
 <title>Login</title>
 <link rel="icon" href="https://f0.pngfuel.com/png/982/55/white-laptop-icon-png-clip-art.png">
 <link href="css/pages/account.css" rel='stylesheet' type='text/css' media="all" />
-<body>
-    <h1>Ngân Hàng Shiba Bank</h1>
+<body style="background-image:url(./images/maunen1.jpg);">
+    <h1 style="font-family: 'Times New Roman', Times, serif;color:  #AF1E40;font-size: 70px; font-weight: normal;">Ngân Hàng Shiba Bank</h1>
 <div class="container" id="container">
 	<div class="form-container sign-in-container">
 		<form method="POST">
-			<h1>Register</h1>
+			<h1>Đăng kí</h1>
             <input name="email" id="email" type="mail" placeholder="Email" />
-            <input name="displayName" id="displayName" type="text" placeholder="FullName" />
-			<input name="password" id="password" type="password" placeholder="Password" />
-			<a>Are you sure?</a>
+            <input name="displayName" id="displayName" type="text" placeholder="Họ Tên" />
+			<input name="password" id="password" type="password" placeholder="Mật Khẩu" />
+			<a>Bạn đã chắc chắn?</a>
 			
-			<button type="submit">Register</button>
+			<button type="submit">Đăng kí</button>
 		</form>
 	</div>
 	<div class="overlay-container">
 		<div class="overlay">
 			<div class="overlay-panel overlay-right">
-				<h1>Hello, Friend!</h1>
-				<p>Enter your personal details and start journey with us</p>
-				<button onclick="window.location.href='/login'" style="background:#FFF!important;color:#FF4B2B!important;margin-top:115px;border:1px solid #FFF" type="submit">Sign In</button>
+				<h1>Welcome ShibaBank</h1>
+				<p>Ngân hàng ShibaBank kính chào quý khách!</p>
+				<p>Bạn đã có tài khoản?</p>
+				<button onclick="window.location.href='/login'" style="background:#FFF!important;color:#FF4B2B!important;margin-top:1vw;border:1px solid #FFF" type="submit">Đăng Nhập</button>
 			</div>
 		</div>
 	</div>
 </div>
 
 <footer>
-	<p>
-		Contact with me <i class="fa fa-heart"></i> by
-		<a target="_blank" href=https://www.facebook.com/tramhuu.nghiep1999">NghiepTram</a>
-		- Read how I created this and how you can join the challenge
-		<a target="_blank" href="https://www.florin-pop.com/blog/2019/03/double-slider-sign-in-up-form/">here</a>.
-	</p>
 </footer>
 </body>
