--- a/views/partials/home.ejs
+++ b/views/partials/home.ejs
@@ -1,12 +1,16 @@
 <%- include ('templateheader.ejs') -%>
 <%- include ('templateleft.ejs') -%>
-<br/>
-<% if(currentUser && currentUser.token!==null) {%>
-        <h4>Chào mừng <%= currentUser.displayName %> vui lòng activate</h4>
-      <% } if(currentUser && currentUser.token===null) { %>
-        <h3>Chào mừng <%= currentUser.displayName %>!</h3>
-      <% }%>
-      <hr/>
-
 <%- include ('templateright.ejs') -%>
+<div style="width: auto; height: 30vw; margin-top: 1vw; margin-bottom: 1vw;">
+  <%- include ('../pages/banner.ejs') -%>
+</div>
+<br/>
+<hr/>
 <%- include ('templatefooter.ejs') -%>
+
+<style>
+  /* Make the image fully responsive */
+  .carousel-inner img {
+    width: 100%;
+    height: 100%;
+  }
