--- a/views/partials/templateleft.ejs
+++ b/views/partials/templateleft.ejs
@@ -1,23 +1,46 @@
-<div class="col-md-2" style="background: #ffff; border-right:double ;">
-    <div>
-      <img src="../images/logo.png" style= "width: 100px; height: 80px; margin: auto; margin-top: 10px; margin-bottom: 10px; display: block;">
-      <h1 style="font-size: 30px; text-align: center;">ShibaBank</h1>
-      <br/>
-      <hr/>
-    </div>
-    <nav class="nav flex-column">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Quản lí tài khoản</a>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" href="/accountNumber">Tài khoản/Thẻ</a>
-          <a class="dropdown-item" href="">Thông tin tài khoản</a>
-          <a class="dropdown-item" href="/transactionHistory">Liệt kê giao dịch trực tiếp</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-      
-      <a class="nav-link" href="/transfers">Chuyển tiền</a>
-      <a class="nav-link" href="#">Tiền gửi</a>
-    </nav> 
+
+<div class="col-md-3" style="background: #ffff; border-right:double ;">
+  <div>
+    <img src="../images/logo.png"
+      style="width: 100px; height: 80px; margin: auto; margin-top: 10px; margin-bottom: 10px; display: block;">
+    <h1 style="font-size: 30px; text-align: center;">ShibaBank</h1>
+    <p style="text-align: center;color:brown; font-size: 14px;" >(Dịch vụ Internet Banking)</p>
+    <br />
+    <hr />
   </div>
-  <div class="col-md-10" style="background: #ffff;">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12 collapse show d-md-flex bg-light pt-2 pl-0 min-vh-100" id="sidebar">
+        <ul class="nav flex-column flex-nowrap overflow-hidden">
+          <li class="nav-item">
+            <a class="nav-link text-truncate" href="/transfers"><i class="fa fa-home"></i> <span
+                class="d-none d-sm-inline">Chuyển tiền</a></span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link collapsed text-truncate" href="#submenu1" data-toggle="collapse"
+              data-target="#submenu1"><i class="fa fa-table"></i> <span class="d-none d-sm-inline">Quản lí tài khoản ▾</span></a>
+            <div class="collapse" id="submenu1" aria-expanded="false">
+              <ul class="flex-column pl-2 nav">
+                <li class="nav-item"><a class="nav-link py-0" href="/accountNumber"><span>Tài khoản/Thẻ</span></a></li>
+                <li class="nav-item">
+                  <a class="nav-link py-0" href="#"><span>Thông tin tài khoản</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link py-0" href="transactionHistory"><span>Liệt kê giao dịch trực tiếp</span></a>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="nav-item"><a class="nav-link text-truncate" href="#"><i class="fa fa-bar-chart"></i> <span
+                class="d-none d-sm-inline">Tiền gửi</span></a></li>
+          <li class="nav-item"><a class="nav-link text-truncate" href="#"><i class="fa fa-download"></i> <span
+                class="d-none d-sm-inline">Export</span></a></li>
+        </ul>
+      </div>
+      
+    </div>
+  </div>
+</div>
+<div class="col-md-9" style="background: #ffff;">
+
+
