--- a/views/pages/forgotpassword.ejs
+++ b/views/pages/forgotpassword.ejs
@@ -8,7 +8,7 @@
     <h1>Ngân Hàng Shiba Bank</h1>
 <div class="container" id="container">
 	<div class="form-container sign-in-container">
-		<form method="POST" action="resetPassword">
+		<form method="POST" >
 			<h1>Xác Nhận Tài Khoản</h1>
             <input name="email" id="email" type="mail" placeholder="Email" />
 			<button type="submit">Xác Nhận</button>
