--- a/views/pages/resetPassword.ejs
+++ b/views/pages/resetPassword.ejs
@@ -8,8 +8,9 @@
     <h1>Ngân Hàng Shiba Bank</h1>
 <div class="container" id="container">
 	<div class="form-container sign-in-container">
-		<form method="GET">
+		<form method="POST">
 			<h1>Reset Password</h1>
+            <input name="code" id="code" type="text" placeholder="Mã xác thực" />
             <input name="password1" id="password1" type="password" placeholder="Mật khẩu" />
             <input name="password2" id="password2" type="password" placeholder="Xác Nhận mật khẩu" />
 			<button type="submit">Xác Nhận</button>
