add profile, mange, change bank

--- a/views/partials/notification.ejs
+++ b/views/partials/notification.ejs
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<%- include ('templateheader.ejs') -%>
+<%- include ('templateleft.ejs') -%>
+<br />
+
+<%- include ('templateright.ejs') -%>
+<br />
+<div class="container">
     <h3><%= status %> </h3>
-</body>
-</html>
+</div>
+
+<%- include ('templatefooter.ejs') -%>
