--- a/views/partials/templateleft.ejs
+++ b/views/partials/templateleft.ejs
@@ -23,10 +23,10 @@
               <ul class="flex-column pl-2 nav">
                 <li class="nav-item"><a class="nav-link py-0" href="/accountNumber"><span>Tài khoản/Thẻ</span></a></li>
                 <li class="nav-item">
-                  <a class="nav-link py-0" href="#"><span>Thông tin tài khoản</span></a>
+                  <a class="nav-link py-0" href="/profile"><span>Thông tin tài khoản</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link py-0" href="transactionHistory"><span>Liệt kê giao dịch trực tiếp</span></a>
+                  <a class="nav-link py-0" href="/transactionHistory"><span>Liệt kê giao dịch trực tiếp</span></a>
                 </li>
               </ul>
             </div>
