--- a/views/partials/verifyMoney.ejs
+++ b/views/partials/verifyMoney.ejs
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<%- include ('templateheader.ejs') -%>
+<%- include ('templateleft.ejs') -%>
+<br />
 
-    <title>Document</title>
-</head>
-<body>
+<%- include ('templateright.ejs') -%>
+<br />
+
     <div class="container">
-        <form method="GET" action="verifyMoney/<%= transaction.code %>">
+        <form method="POST">
             <div class="form-group">
                 <p>Mã giao dịch: <%= transaction.code %> </p>
                 <p>Tài khoản gửi: <%= transaction.accuontSender %> </p>
@@ -19,8 +16,9 @@
                 <p>Phí chuyển: 2.200 VNĐ</p>
                 <p>Nội dung:  <%= transaction.content %></p>
             </div>
+            <input class="" type="text" id="code" name="code" placeholder="Mã xác thực">
             <button type="submit" class="btn btn-primary mb-2">Tiếp tục</button>
         </form>
     </div>
-</body>
-</html>
+
+<%- include ('templatefooter.ejs') -%>
