--- a/views/partials/templateheader.ejs
+++ b/views/partials/templateheader.ejs
@@ -35,8 +35,8 @@
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Tài khoản</a>
                     <div class="dropdown-menu">
                       <a class="dropdown-item" href="/accountNumber">Thông tin tài khoản</a>
-                      <a class="dropdown-item" href="">Lịch sử giao dịch</a>
-                      <a class="dropdown-item" href="#">Đổi mật khẩu</a>
+                      <a class="dropdown-item" href="/">Lịch sử giao dịch</a>
+                      <a class="dropdown-item" href="/changepassword">Đổi mật khẩu</a>
                     </div>
                   </li>
                   <li class="nav-item">
